// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ScriptFeature > getGeometry() 1`] = `
{
  "coordinates": [
    -41.30467214209378,
    48.53131787315718,
  ],
  "type": "Point",
}
`;

exports[`ScriptFeature > setGeometry() 1`] = `
{
  "coordinates": [
    -41,
    49,
  ],
  "type": "Point",
}
`;

exports[`ScriptFeature > setGeometry() 2`] = `
[
  -4564099.122524217,
  6274861.394006576,
]
`;
